working on maven documentations, javadoc atm